# tortuga-swap

./: .gitignore  Cargo.toml  PROJECT.md  README.md
crates/adaptor/: Cargo.toml
crates/adaptor/src/: lib.rs  schnorr.rs
crates/bitcoin/: Cargo.toml
crates/bitcoin/src/: esplora.rs  funding.rs  htlc.rs  lib.rs  taproot.rs
crates/cl-crypto/: Cargo.toml
crates/cl-crypto/src/: convert.rs  encryption.rs  keys.rs  lib.rs  proof.rs  puzzle.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  setup.rs  swap_a2l.rs  swap_htlc.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs  promise.rs  solver.rs  tumbler.rs  types.rs
crates/protocol/tests/: a2l_swap.rs  regtest_demo.rs
scripts/: demo-a2l.sh  demo-compare.sh  demo-htlc.sh  demo-walkthrough.sh  setup-nigiri.sh
tests/: adaptor_test.rs  cl_crypto_test.rs  integration_test.rs  puzzle_test.rs
