[workspace]
resolver = "2"
members = [
    "crates/cl-crypto",
    "crates/adaptor",
    "crates/protocol",
]

[workspace.dependencies]
# Elliptic curve / Bitcoin
secp256k1 = { version = "0.29", features = ["global-context", "rand-std"] }
bitcoin = { version = "0.32", features = ["rand-std"] }

# CL encryption (class groups via PARI)
class_group = { git = "https://github.com/ZenGo-X/class", branch = "master" }
curv-kzen = { version = "0.10", default-features = false }

# Serialization / networking
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

# Crypto utilities
sha2 = "0.10"
rand = "0.8"
hex = "0.4"

# CLI
clap = { version = "4", features = ["derive"] }

# Errors
anyhow = "1"
thiserror = "1"
