[package]
name = "tortuga-bitcoin"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin.workspace = true
secp256k1.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
anyhow.workspace = true
thiserror.workspace = true
sha2.workspace = true
rand.workspace = true
